# Deepseek-Assistant-Browser

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  mkdocs.yml  ollama_config.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  container.yml  docker.yml  docs.yml  release.yml
deploy/: prometheus.yml
deploy/cloud/aws/: deploy.sh
deploy/cloud/azure/: deploy.sh
deploy/cloud/gcp/: deploy.sh
docs/: api_reference.md  examples.md  index.md
examples/: README.md  error_handling.py  news_summarization.py  performance_patterns.py  price_comparison.py  social_media_monitoring.py  task_execution.py  task_templates.py
scripts/: healthcheck.sh  install_linux.sh  install_macos.sh  install_windows.ps1  setup_env.sh
src/deepseek_browser/: __init__.py  monitoring.py  task_executor.py  templates.py
tests/: __init__.py  conftest.py  test_browser_agent.py  test_browser_automation.py  test_monitoring.py  test_ollama_integration.py  test_performance.py  test_task_executor.py  test_templates.py
